# microBadge

./: HyphaQR.txt  LICENSE  README.md  basic.html  microBadge-transcript.txt  reporter.html
microBadge/: CMakeLists.txt  README.txt
microBadge/include/: microBadge.hpp
microBadge/ricardian/: microBadge.clauses.md  microBadge.contracts.md
microBadge/src/: CMakeLists.txt  microBadge.cpp
